[gd_scene load_steps=75 format=3 uid="uid://c2ft1icfcouhu"]

[ext_resource type="Script" path="res://scripts/Archer/Archer.gd" id="1_2g1qm"]
[ext_resource type="Texture2D" uid="uid://c0ewgs8j5w5o5" path="res://assets/enemy_spritesheet.png" id="2_lsapj"]
[ext_resource type="Texture2D" uid="uid://bmg0kai8esdfi" path="res://assets/blood_fx.png" id="3_plgyk"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="4_gfa7i"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherAttack.gd" id="6_3qa3y"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherDie.gd" id="6_h578t"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherEnter.gd" id="7_hy7mj"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherFollow.gd" id="8_brbpe"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherBacktrack.gd" id="9_ptk14"]
[ext_resource type="Script" path="res://scripts/Archer/ArcherHit.gd" id="10_a54mn"]
[ext_resource type="PackedScene" uid="uid://cf0lenuqol67s" path="res://scenes/fx/footprint_spawner.tscn" id="18_7uxje"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvt4y"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcg63"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5xif"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rrap"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_heom7"]
atlas = ExtResource("2_lsapj")
region = Rect2(640, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2apf4"]
atlas = ExtResource("2_lsapj")
region = Rect2(768, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q42t3"]
atlas = ExtResource("2_lsapj")
region = Rect2(896, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8bw4"]
atlas = ExtResource("2_lsapj")
region = Rect2(1024, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_unkyx"]
atlas = ExtResource("2_lsapj")
region = Rect2(1152, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpey3"]
atlas = ExtResource("2_lsapj")
region = Rect2(1280, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vgt0"]
atlas = ExtResource("2_lsapj")
region = Rect2(1408, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieokf"]
atlas = ExtResource("2_lsapj")
region = Rect2(1536, 768, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7mg6"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeeba"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc6kv"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f6gn"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bh3t"]
atlas = ExtResource("2_lsapj")
region = Rect2(640, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovgpg"]
atlas = ExtResource("2_lsapj")
region = Rect2(768, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofsh0"]
atlas = ExtResource("2_lsapj")
region = Rect2(896, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8n7u"]
atlas = ExtResource("2_lsapj")
region = Rect2(1024, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyk3w"]
atlas = ExtResource("2_lsapj")
region = Rect2(1152, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d15o"]
atlas = ExtResource("2_lsapj")
region = Rect2(1280, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nntfl"]
atlas = ExtResource("2_lsapj")
region = Rect2(1408, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp0rg"]
atlas = ExtResource("2_lsapj")
region = Rect2(1536, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a4v0"]
atlas = ExtResource("2_lsapj")
region = Rect2(1664, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_615lg"]
atlas = ExtResource("2_lsapj")
region = Rect2(1792, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ptk"]
atlas = ExtResource("2_lsapj")
region = Rect2(1920, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyxl0"]
atlas = ExtResource("2_lsapj")
region = Rect2(0, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfrpl"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqb18"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 1152, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tr7y"]
atlas = ExtResource("2_lsapj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_slbq0"]
atlas = ExtResource("2_lsapj")
region = Rect2(0, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cxqj"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmx3u"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrp6y"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b0dq"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5luog"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_csfv5"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_72cun"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_513d7"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck4mv"]
atlas = ExtResource("2_lsapj")
region = Rect2(0, 1024, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoonr"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4ys5"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqw5v"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkl2n"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcjto"]
atlas = ExtResource("2_lsapj")
region = Rect2(640, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6xj"]
atlas = ExtResource("2_lsapj")
region = Rect2(768, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvmkt"]
atlas = ExtResource("2_lsapj")
region = Rect2(896, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1idw"]
atlas = ExtResource("2_lsapj")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce10q"]
atlas = ExtResource("2_lsapj")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_56187"]
atlas = ExtResource("2_lsapj")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yiun"]
atlas = ExtResource("2_lsapj")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjald"]
atlas = ExtResource("2_lsapj")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo4v1"]
atlas = ExtResource("2_lsapj")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7obpo"]
atlas = ExtResource("2_lsapj")
region = Rect2(896, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_658jt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvt4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcg63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5xif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rrap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_heom7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2apf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q42t3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8bw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unkyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpey3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vgt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieokf")
}],
"loop": false,
"name": &"Death1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7mg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeeba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc6kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f6gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bh3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovgpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofsh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8n7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyk3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d15o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nntfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp0rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a4v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_615lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ptk")
}],
"loop": false,
"name": &"Death2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyxl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfrpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqb18")
}],
"loop": false,
"name": &"GetHit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tr7y")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slbq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cxqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmx3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrp6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b0dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5luog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csfv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72cun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_513d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck4mv")
}],
"loop": false,
"name": &"Taunt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoonr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4ys5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqw5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkl2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvmkt")
}],
"loop": true,
"name": &"WalkBackward",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1idw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce10q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56187")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yiun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjald")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo4v1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7obpo")
}],
"loop": true,
"name": &"WalkForward",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_eekqw"]
atlas = ExtResource("3_plgyk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk810"]
atlas = ExtResource("3_plgyk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_82f52"]
atlas = ExtResource("3_plgyk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ctt"]
atlas = ExtResource("3_plgyk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wx2i0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eekqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk810")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82f52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ctt")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_quqjl"]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_332u1"]
radius = 12.0
height = 42.0

[node name="Archer" type="CharacterBody2D" groups=["Enemy"]]
motion_mode = 1
script = ExtResource("1_2g1qm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_658jt")
animation = &"WalkForward"
flip_h = true

[node name="blood" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(2, 5)
sprite_frames = SubResource("SpriteFrames_wx2i0")
autoplay = "default"
frame = 3
frame_progress = 1.0
flip_h = true

[node name="Shadow" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_658jt")
animation = &"Death1"
offset = Vector2(0, 65.58)
flip_h = true
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 33)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_quqjl")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxArea" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 12)
scale = Vector2(1, 1.08)
shape = SubResource("CapsuleShape2D_332u1")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-326, 0)
collision_mask = 2
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(0, 32)
target_position = Vector2(-48, 0)

[node name="StateMachineArcher" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("4_gfa7i")
starting_state = NodePath("Follow")

[node name="Attack" type="Node" parent="StateMachineArcher"]
script = ExtResource("6_3qa3y")

[node name="Die" type="Node" parent="StateMachineArcher"]
script = ExtResource("6_h578t")

[node name="Follow" type="Node" parent="StateMachineArcher"]
script = ExtResource("8_brbpe")
follow_speed = 300

[node name="Enter" type="Node" parent="StateMachineArcher"]
script = ExtResource("7_hy7mj")

[node name="Backtrack" type="Node" parent="StateMachineArcher"]
script = ExtResource("9_ptk14")

[node name="Hit" type="Node" parent="StateMachineArcher"]
script = ExtResource("10_a54mn")

[node name="Debug" type="Label" parent="."]
visible = false
offset_top = -34.0
offset_right = 40.0
offset_bottom = -11.0

[node name="Debug2" type="Label" parent="."]
visible = false
offset_top = 42.0
offset_right = 40.0
offset_bottom = 65.0

[node name="EnemyFX" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 3

[node name="FootprintSpawner" parent="." instance=ExtResource("18_7uxje")]
frequency = 0.5
emit_time = 1.0
emitting = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachineArcher/Attack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachineArcher/Die" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachineArcher/Hit" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="blood" to="." method="_on_blood_animation_finished"]
